# chall2025-stack-smashing

./: HACKME.md  README.md  challenge.yaml  challenge_template.yaml  docker-compose.yaml
solution/: FLAGS.md  README.md  poc.py
source/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh
source/chall/: flag.txt  run.sh  server
source/code/: server.c
